@@ -1,3 +1,8 @@
+2005-04-11  Mark McLoughlin  <mark@skynet.ie>
+
+	* control-center-categories.c: update for libgnome-menu
+	API renaming.
+
 2005-04-06  Mark McLoughlin  <mark@skynet.ie>
 
 	* control-center-categories.c: (control_center_get_information):
